--- a/one/AUTHORS
+++ b/one/AUTHORS
@@ -1,2 +1,4 @@
-this project was done by me
-Oluwasegun Ogunniyi <adebayoogunniyi8@gmail.com>
+# This file lists all individuals having contributed content to the repository.
+
+John Doe <johndoe@gmail.com>
+Jane Doe <janedoe@gmail.com>
